--- a/PRNFE.MVC/Views/BillDetail/List.cshtml
+++ b/PRNFE.MVC/Views/BillDetail/List.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<BillDetailResponse>
+﻿@* @model List<BillDetailResponse>
 @{
     ViewData["Title"] = "Danh sách chi tiết hóa đơn";
 }
@@ -160,4 +160,4 @@
             }
         }
     </script>
-}
+} *@
