--- a/PRNFE.MVC/Views/Rooms/Edit.cshtml
+++ b/PRNFE.MVC/Views/Rooms/Edit.cshtml
@@ -76,7 +76,7 @@
             <div class="card shadow-sm mb-4">
                 <div class="card-header bg-pink text-Black">
                     <div class="d-flex justify-content-between align-items-center">
-                        <h4 class="mb-0" style="color: blac;">
+                        <h4 class="mb-0" style="color: black;">
                             <i class="fas fa-edit me-2"></i>@ViewData["Title"] - Phòng @Model.RoomNumber
                         </h4>
                         <div class="btn-group">
