--- a/PRNFE.MVC/Views/Bill/Details.cshtml
+++ b/PRNFE.MVC/Views/Bill/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model PRNFE.MVC.Models.Request.BillResponse
+﻿@model PRNFE.MVC.Models.Request.BillResponses
 @using PRNFE.MVC.Models.Request
 @{
     ViewData["Title"] = "Chi tiết Hóa đơn";
