--- a/PRNFE.MVC/Views/Resident/Edit.cshtml
+++ b/PRNFE.MVC/Views/Resident/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model PRNFE.MVC.Models.Request.ResidentUpdateRequest
+﻿@model PRNFE.MVC.Models.Request.ResidentUpdateRequests
 
 @{
     ViewData["Title"] = "Chỉnh sửa cư dân";
