--- a/PRNFE.MVC/Views/Vehicle/Details.cshtml
+++ b/PRNFE.MVC/Views/Vehicle/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model PRNFE.MVC.Models.Response.DetailedVehicleResponse
+﻿@model PRNFE.MVC.Models.Response.DetailedVehicleResponses
 @{
     ViewData["Title"] = "Chi tiết Phương tiện";
 }
